# SimpleGE

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: SimpleGEConfig.cmake.in
config/: CMakeLists.txt
config/debug/: config.h.in
config/release/: config.h.in
config/test/: config.h.in
modules/thread_management/: CMakeLists.txt  README.md
modules/thread_management/include/: lock-free_queue.hpp  lock-free_queue_impl.hpp  thread_pool.hpp
modules/thread_management/src/: thread_management.cpp  thread_pool.cpp
modules/thread_management/tests/: CMakeLists.txt  tests.cpp
modules/utils/: CMakeLists.txt
modules/utils/include/: utils.hpp
modules/utils/src/: utils.cpp
modules/utils/tests/: CMakeLists.txt  tests.cpp
